# harm-refuse

./: .gitignore  README.md  pyproject.toml  run.py  test.py
conf/: models.yaml
conf/experiments/: cluster.yaml  defaults.yaml
conf/model/: llama2.yaml  llama3-70B.yaml  llama3-8B-unsloth.yaml  llama3-8B.yaml  llama3.yaml  qwen.yaml  smol.yaml
src/harm_refuse/experiments/: __init__.py  cluster.py
src/harm_refuse/utils/: config.py  data.py  inference.py  refuse.py
src/harm_refuse/utils/load/: prompts.py
tools/: inspect_models.py
